--- a/css/style.css
+++ b/css/style.css
@@ -10,120 +10,624 @@
 	box-sizing: border-box;
 }
 
-.container {
-	margin: 0 auto;
-	padding: 0 15px;
+body {
+	margin: 0;
+	background-image: url("../img/background.jpg");
+	background-size: 100vw;
+	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+	height: 100%;
 }
 
 header {
-
-}
-
-header .col-2 img {
+	position: relative;
 	width: 100%;
+	height: 8vw;
+	padding: 1vw 0;
+	background-size: 100%;
 }
 
-main h1 {
+#body {
+	height: 100%;
+	padding-bottom: 12vw;
+}
+
+#all-content {
+	height: 100%;
+	width: 100%;
+	position: relative;
+}
+
+#headerInside {
+	width: 100%;
+	height: 7vw;
+	margin-bottom: 0vw;
+	padding-left: 1vw;
+	padding-right: 1vw;
+	position: relative;
+	background: white;
+	opacity: 0.8;
+}
+
+#left-menu {
+    width: 20vw;
+    height: 7vw;
+    margin-left: 3vw;
+    position: absolute;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
+
+#central-logo {
+	position: absolute;
+	width: 53vw;
+	height: 7vw;
+	margin-left: 23vw;
+}
+
+#central-logo img {
+	opacity: 1;
+	height: 7vw;
+	display: block;
+	margin: 0 auto;
+	margin-top: 0.2vw;
+}
+
+#right-menu {
+    width: 30vw;
+    height: 7vw;
+	display: flex;
+	align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#left-menu a, #right-menu a {
+	font-size: 1.6vw;
+	color: #000;
+	text-decoration: none;
+	margin-right: 1vw;
+	height: 7vw;
+	line-height: 7vw;
+}
+
+#top-content {
+	width: 100%;
+	height: 41.6vw;
+	background-color: rgba(255, 255, 255, 0.3);
+	position: relative;
+	z-index: 1;
+}
+
+.slideshow {
+	width: 100%;
+	height: 37vw;
+	position: relative;
+	margin-top: 0.5vw;
+}
+
+.slideshow img {
+	position: absolute;
+	animation: slideshow 21s infinite;
+	opacity: 0;
+	width: 100%;
+	height: auto;
+}
+
+@keyframes slideshow {
+	30%{opacity:1;}
+	60%{opacity:0;}
+} 
+.slideshow img:nth-child(3) {
+	animation-delay:0s;
+}
+.slideshow img:nth-child(2) {
+	animation-delay:7s;
+}
+.slideshow img:nth-child(1) {
+	animation-delay:14s;
+}
+
+.drop-down-menu {
+	height: 4vw;
+	width: 70vw;
+    height: auto;
+    margin: 0 auto;
+    padding-left: 4vw;
+    padding-top: 0.5vw;
+    position: relative;
+}
+.dropbtn {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 1vw;
+    font-size: 1.4vw;
+        border: none;
+    width: 15vw;
+}
+
+.dropbtn a {
+    color: black;
+    text-decoration: none;
+}
+
+.wrapper {
+    position: relative;
+    display: inline-block;
+}
+.content {
+    display: none;
+    color: black;
+    width: 15vw;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.content a {
+    padding: 12px 16px;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+}
+.content a:hover {
+	background-color: rgba(255, 255, 255, 0.6);
+}
+.wrapper:hover .content {
+    display: block;
+}
+.wrapper:hover .dropbtn {
+    background-color: rgb(255, 255, 255);
+}
+
+.titles {
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+	text-align: center;
+	color: #4c3b1d;
+}
+
+#best-sellers {
+	width: 100%;
+	height: 80vw;
+	position: relative;
+}
+
+.shopUnit {
+	width: 38%;
+    padding: 5px;
+    margin-right: 6.365%;
+    margin-bottom: 4vw;
+    font-size: 1.2vw;
+}
+
+#top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 6vw;
+}
+
+#top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 38%;
+}
+
+#bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 6vw;
+}
+
+#bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.shopUnitName {
+    width: 100%;
+    text-align: center;
+    margin-top: 0.5vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+
+.shopUnit img {
+    height: 17vw;
+	display: block;
+    margin: 0 auto;
+}
+
+.shopUnitShortDesc {
+	background: white;
+	opacity: 0.8;
+    text-align: justify;
+    margin-top: 0.5vw;
+    padding: 1vw;
+}
+
+.shopUnitPrice {
+    text-align: right;
+    padding-right: 3vw;
+    margin-top: 1vw;
+    color: #6d5428;
+    font-weight: bold;
+    font-size: 1.3vw;
+}
+
+.shopUnitMore {
+    border: none;
+    padding: 5px 15px;
+    background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	color: #fff;
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 0.5vw;
+}
+
+.shopUnitMore:hover {
+    background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
+    border-radius: 0.5vw;
+}
+
+#footer {
+	height: 12vw;
+	width: 100%;
+	background: white;
+	opacity: 0.8;
+	margin-bottom: 0;
+	font-size: 1vw;
 	text-align: center;
 }
 
-div[class^="col-"] {
-	float: left;
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px;
+#footerInside {
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    height: 100%;
 }
 
-.row {
-	margin-right: -15px;
-	margin-left: -15px;
+#copyrights {
+    position: absolute;
+    bottom: 1vw;
+    width: 100%;
+    text-align: center;
 }
 
-.clearfix:before,
-.clearfix:after,
-.container:before,
-.container:after,
-.row:before,
-.row:after {
-	display: table;
-	content: " ";
+#social {
+    padding-top: 0.3vw;
+    width: 100%;
+    height: 3vw;
+    position: absolute;
+    bottom: 3vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.clearfix:after,
-.container:after,
-.row:after {
-	clear: both;
+.socialItem {
+    height: 3vw;
 }
 
-.col-12 {
+#contacts {
+    position: absolute;
+    left: 0;
+    top: 1.5vw;
+    width: 20vw;
+}
+
+.contactWrap {
+    float: left;
+    width: 100%;
+    margin-bottom: 0.5vw;
+    line-height: 2.5vw;
+}
+
+.contactIcon {
+    width: 2vw;
+    float: left;
+}
+
+
+#sign-in {
+	margin: 0 auto;
+	width: 50vw;
+	height: 60vw;
+}
+#auth-form, #registration {
+	height: 30vw;
+	width: 30vw;
+	text-align: center;
+	position: absolute;
+	top: 30%;
+	left: 45%;
+	transform: translate(-30%, -45%);
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius: 2vw;
+}
+
+#insides-auth-form, #reg-form {
+	font-size: 2vw;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#insides-auth-form button, #insides-reg-form button{
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	color: #fff;
+	height: 3vw;
+	width: 90%;
+	margin: 1vw;
+	margin-top: 4vw;
+	font-size: 2vw;
+}
+
+#insides-auth-form button:hover, #insides-reg-form button:hover{
+	background-color: #b79042;
+	border: solid 0.1vw #b79042;
+	color: #443921;
+}
+
+#registration {
+	height: 30vw;
+	width: 30vw;
+}
+
+#reg-contain {
+	height: 70vw;
 	width: 100%;
 }
 
-.col-11 {
-	width: 91.66666667%;
+#reg-form {
+	font-size: 2vw;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: left;
+	padding: 0.5vw;
 }
 
-.col-10 {
-	width: 83.33333333%;
+#reg-form input {
+	float: right;
+	width: 12vw;
+	margin-top: 0.5vw;
 }
 
-.col-9 {
-	width: 75%;
+/*STYLES FOR AN OPEN PRODUCT*/
+
+#open-product {
+	width: 100%;
+	height: 60vw;
 }
 
-.col-8 {
-	width: 66.66666667%;
+#open-product #name {
+	text-align: center;
+	margin-top: 4vw;
 }
 
-.col-7 {
-	width: 58.33333333%;
+#inside-open-product {
+	height: 25vw;
+	position: relative;
 }
 
-.col-6 {
-	width: 50%;
+
+#product-description {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: rgba(255, 255, 255, 0.6);
+	margin-top: 1vw;
+	margin-right: 4vw;
+	height: 13vw;
+	width: 47vw;
+	padding: 2vw;
+	border-radius: 2vw;
 }
 
-.col-5 {
-	width: 41.66666667%;
+#product-description p {
+	font-size: 1.2vw;
+	margin-top: -0.1vw;
+	line-height: 4vw;
 }
 
-.col-4 {
-	width: 33.33333333%;
+#inside-open-product img {
+	width: 30vw;
+	margin-left: 10vw;
+	margin-top: 1vw;
 }
 
-.col-3 {
-	width: 25%;
+#inside-open-product button {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	margin-right: 4vw;
+	margin-bottom: 4vw;
+	height: 4vw;
+	width: 47vw;
+	border-radius: 2vw;
+	font-size: 1.7vw;
+	color: #fff;
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
 }
 
-.col-2 {
-	width: 16.66666667%;
+#inside-open-product button:hover {
+	background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
 }
 
-.col-1 {
-	width: 8.33333333%;
+/*END OF STYLES FOR AN OPEN PRODUCT*/
+
+/*START OF STYLES FOR THE CART*/
+#cart {
+	position: relative;
+	height: 70vw;
 }
 
-@media (min-width: 320px) {
-	.container {
-		width: 95%;
-	}
+#cart-table {
+	height: 50vw;
 }
 
-@media (min-width: 768px) {
-	.container {
-		width: 750px;
-	}
+#cart-table table {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 2vw;
+	padding: 1vw;
 }
 
-@media (min-width: 992px) {
-	.container {
-		width: 970px;
-	}
+#cart-table table th{
+	font-size: 2vw;
+	padding-right: 2vw;
+	padding-left: 2vw;
 }
 
-@media (min-width: 1200px) {
-	.container {
-		width: 1170px;
-	}
+#cart-table table td{
+	font-size: 2vw;
 }
+
+#cart-table table tr{
+	height: 3vw;
+}
+
+#cart-table button {
+	height: 3vw;
+	width: 8vw;
+	color: #fff;
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	border-radius: 2vw; 
+	font-size: 1vw;
+}
+
+#cart-table button:hover {
+	background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
+}
+/*END OF STYLES FOR THE CART*/
+
+/*START OF STYLES FOR ABOUT US*/
+
+#about-us {
+	position: relative;
+	height: 60vw;
+}
+
+#about-us-content {
+	position: relative;
+	height: 100%;
+}
+
+#about-us-content img{
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+	width: 60vw;
+}
+
+#about-us-content p{
+	position: absolute;
+	left: 50%;
+	top: 80%;
+	transform: translate(-50%, -80%);
+	width: 50vw;
+	background-color: rgba(96, 92, 83, 0.7);
+	color: white;
+	padding: 1vw;
+	border-radius: 2vw;
+	font-size: 1.3vw;
+}
+
+/*END OF STYLES FOR ABOUT US*/
+
+/*START OF STYLES FOR DELIVERY*/
+
+#delivery-big {
+	position: relative;
+	height: 70vw;
+}
+
+#delivery-content {
+	position: relative;
+	height: 100%;
+}
+
+#delivery-content img{
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+	width: 50vw;
+}
+
+#delivery-content p{
+	position: absolute;
+	left: 50%;
+	top: 60%;
+	transform: translate(-50%, -60%);
+	width: 50vw;
+	background-color: rgba(96, 92, 83, 0.7);
+	color: white;
+	padding: 1vw;
+	border-radius: 2vw;
+}
+
+#delivery-content p a{
+	text-decoration: none;
+	color: #3d3523;
+}
+
+#delivery-content p a:hover{
+	color: #fff;
+}
+
+/*END OF STYLES FOR DELIVERY*/
+
+/*START OF STYLES FOR CONTACT*/
+
+#contact-us {
+	position: relative;
+	height: 50vw;
+}
+
+#contact-us-content {
+	position: relative;
+	height: 100%;
+}
+
+#contact-us-content img{
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+	width: 60vw;
+}
+
+#contact-us-content p{
+	position: absolute;
+	left: 60%;
+	top: 20%;
+	transform: translate(-60%, -20%);
+	width: 25vw;
+	background-color: rgba(96, 92, 83, 0.7);
+	color: white;
+	padding: 2vw;
+	border-radius: 2vw;
+	font-size: 1.5vw;
+}
+
+/*END OF STYLES FOR CONTACT*/
