--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,19 @@
 	box-sizing: border-box;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	margin: 0;
 	background-image: url("../img/background.jpg");
 	background-size: 100vw;
 	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-	height: 100%;
+	min-height: 100%;
+	height: auto;
+	position: relative;
+	/*padding-bottom: 12vw;*/
 }
 
 header {
@@ -26,8 +33,8 @@ header {
 	background-size: 100%;
 }
 
-#body {
-	height: 100%;
+main {
+	/*height: 100%;*/
 	padding-bottom: 12vw;
 }
 
@@ -285,6 +292,10 @@ header {
 	margin-bottom: 0;
 	font-size: 1vw;
 	text-align: center;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 #footerInside {
@@ -438,9 +449,9 @@ header {
 }
 
 #product-description p {
-	font-size: 1.2vw;
+	font-size: 1vw;
 	margin-top: -0.1vw;
-	line-height: 4vw;
+	line-height: 2vw;
 }
 
 #inside-open-product img {
@@ -505,8 +516,7 @@ header {
 	height: 3vw;
 }
 
-#cart-table button {
-	height: 3vw;
+#cart-table a {
 	width: 8vw;
 	color: #fff;
 	background-color: #6d5424;
@@ -515,7 +525,7 @@ header {
 	font-size: 1vw;
 }
 
-#cart-table button:hover {
+#cart-table a:hover {
 	background-color: #b79042;
 	color: #443921;
 	border: solid 0.1vw #b79042;
@@ -631,3 +641,181 @@ header {
 }
 
 /*END OF STYLES FOR CONTACT*/
+
+/*START OF STYLES FOR PRODUCTS*/
+
+#products {
+	position: relative;
+	height: 50vw;
+}
+
+#content-products {
+	position: relative;
+	height: 100%;
+}
+
+#admin-access {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20vw;
+	height: 10vw;
+	margin-top: 3vw;
+	margin-left: 3vw;
+	padding: 2vw;
+	border-radius: 2vw;
+	background-color: rgba(255, 255, 255, 0.7);
+	text-align: center;
+}
+
+#admin-access a {
+	text-decoration: none;
+	font-size: 1.2vw;
+	display: inline-block;
+	margin-top: 1vw;
+	color: #6d5424;
+}
+
+#admin-access a:hover{
+	color: #b79042;
+}
+
+#products-list {
+	margin-left: 25vw;
+}
+
+
+.particular-product {
+	margin-top: 0.3vw;
+	background-color: rgba(255, 255, 255, 0.6);
+	display: inline-block;
+	width: 33%;
+	padding: 0.5vw;
+}
+
+.particular-product a{
+	float: left;
+	text-decoration: none;
+	color: #3f382d;
+	font-weight: bold;
+	padding: 1vw;
+	font-size: 1.3vw;
+}
+
+.particular-product p{
+	float: right;
+	color: #3f382d;
+	font-weight: bold;
+	font-style: italic;
+	font-size: 1.5vw; 
+	padding: 1vw;
+}
+
+.particular-product .img {
+	display: block;
+	text-align: center;
+}
+
+.particular-product img{
+	/*width: 100%;*/
+	height: 10vw;
+}
+
+.clearfix {
+	clear: both;
+}
+
+/*END OF STYLES FOR PRODUCTS*/
+
+/*START OF STYLES FOR ADD-CAT*/
+
+#add-cat {
+	margin: 0 auto;
+	width: 20vw;
+	padding: 2vw;
+}
+
+#add-cat form div input{
+	float: right;
+	width: 70%;
+	height: 1.5vw;
+}
+
+#create-cat-button{
+	margin: 0 auto;
+	margin-top: 3vw;
+	width: 100%;
+	color: #fff;
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	border-radius: 2vw; 
+	font-size: 1vw;
+}
+
+#create-cat-button:hover{
+	background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
+}
+
+/*END OF STYLES FOR ADD-CAT*/
+
+/*START OF STYLES FOR ADD-PRODUCT*/
+
+#add-product {
+	margin: 0 auto;
+	width: 35vw;
+	padding: 2vw;
+}
+
+#add-product form div{
+	width: 100%;
+	height: 2vw;
+	margin-top: 0.6vw;
+}
+
+#add-product form div input, #add-product form div textarea{
+	float: right;
+	width: 60%;
+	height: 1.5vw;
+}
+
+#add-product-button{
+	margin: 0 auto;
+	margin-top: 2vw;
+	width: 100%;
+	color: #fff;
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	border-radius: 2vw; 
+	font-size: 1vw;
+}
+
+#add-product-button:hover{
+	background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
+}
+
+/*END OF STYLES FOR ADD-PRODUCT*/
+
+/*START OF STYLES FOR PROFILE*/
+
+#logout-button{
+	color: #fff;
+	background-color: #6d5424;
+	border: solid 0.1vw #6d5424;
+	border-radius: 2vw; 
+	font-size: 1.8vw;
+	text-decoration: none;
+	text-align: center;
+	padding: 10px;
+}
+
+#logout-button:hover{
+	background-color: #b79042;
+	color: #443921;
+	border: solid 0.1vw #b79042;
+}
+
+/*END OF STYLES FOR PROFILE*/
